end core components

--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -1,1 +1,7 @@
-$backgroundColor: #130A21;
+$backgroundColor: #130a21;
+
+$red: #ff0852;
+$blue: #0b4cf5;
+$yellow: #ecb907;
+$green: #15ca9e;
+$purple: #9507ec;
