--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -9,6 +9,183 @@ body,
 html {
   margin: 0;
   padding: 0;
-  font-family: "Satoshi", sans-serif;
-  background-color:$backgroundColor;
+  background-color: $backgroundColor;
+  font-family: "Roboto", sans-serif;
+}
+
+.bg-white-low {
+  background-color: rgba($color: #ffffff, $alpha: 0.1);
+}
+
+.border-low-white {
+  border: 0.5px solid rgba($color: #ffffff, $alpha: 0.2);
+}
+
+.white-title {
+  font-size: 39px;
+  color: #ffffff;
+  font-weight: bold;
+}
+
+.white-body {
+  font-size: 21px;
+  color: rgba($color: #ffffff, $alpha: 0.8);
+}
+
+.link {
+  color: #ffffff;
+  font-size: 19px;
+  font-weight: bold;
+
+  &:hover {
+    color: #ffffff;
+    text-decoration: underline;
+    cursor: pointer;
+  }
+}
+
+.white-card {
+  transition: all 0.3s ease;
+  color: white;
+  background-color: rgba($color: #ffffff, $alpha: 0.1);
+  border: 1px solid rgba($color: #ffffff, $alpha: 0.2);
+}
+
+.white-button {
+  transition: all 0.3s ease;
+  color: white;
+  background-color: rgba($color: #ffffff, $alpha: 0.1);
+  border: 1px solid rgba($color: #ffffff, $alpha: 0.2);
+  font-size: 19px;
+  font-weight: 500;
+
+  &:hover {
+    background-color: rgba($color: #ffffff, $alpha: 0.2);
+  }
+}
+
+.red-button {
+  background-color: $red;
+  box-shadow: 0px 0px 40px 0px $red;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+
+  &:hover {
+    box-shadow: 0px 0px 40px 10px $red;
+  }
+}
+
+.blue-button {
+  background-color: $blue;
+  box-shadow: 0px 0px 40px 0px $blue;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+
+  &:hover {
+    box-shadow: 0px 0px 40px 10px $blue;
+  }
+}
+
+.yellow-button {
+  background-color: $yellow;
+  box-shadow: 0px 0px 40px 0px $yellow;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+
+  &:hover {
+    box-shadow: 0px 0px 40px 10px $yellow;
+  }
+}
+
+.green-button {
+  background-color: $green;
+  box-shadow: 0px 0px 40px 0px $green;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+
+  &:hover {
+    box-shadow: 0px 0px 40px 10px $green;
+  }
+}
+
+.purple-button {
+  background-color: $purple;
+  box-shadow: 0px 0px 40px 0px $purple;
+  transition: all 0.3s ease;
+  color: white;
+  font-size: 19px;
+  font-weight: 500;
+
+  &:hover {
+    box-shadow: 0px 0px 40px 10px $purple;
+  }
+}
+
+.separator {
+  .section-title {
+    font-size: 40px;
+    color: #ffffff;
+    font-weight: bold;
+    font-family: "Recharge", sans-serif;
+  }
+
+  .section-body {
+    font-size: 21px;
+    color: rgba($color: #ffffff, $alpha: 0.8);
+  }
+}
+
+.card-title {
+  font-size: 40px;
+  color: #ffffff;
+  font-weight: bold;
+  font-family: "Recharge", sans-serif;
+}
+
+.card-subtitle {
+  font-size: 26px;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+.card-body {
+  font-size: 21px;
+  color: rgba($color: #ffffff, $alpha: 0.8);
+}
+
+.red {
+  background-color: $red;
+}
+
+.blue {
+  background-color: $blue;
+}
+
+.yellow {
+  background-color: $yellow;
+}
+
+.green {
+  background-color: $green;
+}
+
+.purple {
+  background-color: $purple;
+}
+
+.blured-box {
+  filter: blur(200px);
+}
+
+.subtitle {
+  font-size: 21px;
+  color: rgba($color: #ffffff, $alpha: 0.8);
 }
