--- a/static/sass/_variables.scss
+++ b/static/sass/_variables.scss
@@ -1,7 +1,9 @@
 $backgroundColor: #130a21;
 
 $red: #ff0852;
+$redError: #f03737;
 $blue: #0b4cf5;
 $yellow: #ecb907;
 $green: #15ca9e;
+$greenSuccess: #27d44f;
 $purple: #9507ec;
