--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -301,7 +301,7 @@ html {
   .loisir06-form-input-title {
     font-size: 15px;
     font-weight: 400;
-    // color: $darkBlue;
+    color: white;
   }
 
   .loisir06-form-input {
