--- a/static/sass/main.scss
+++ b/static/sass/main.scss
@@ -269,6 +269,10 @@ html {
   }
 }
 
+.divider {
+  border: 0.5px solid rgba($color: #ffffff, $alpha: 0.2);
+}
+
 .navbar {
   display: flex;
   align-items: center;
